# lab2startup

./: .env.example  .gitignore  Justfile  Lab2Startup.command  PLAN.md  README.md  bootstrap_venv.py  pyproject.toml  requirements.txt  run_agentic_smoke.py  run_app.py  run_dashboard.py  run_diff.py  run_enrichment_check.py  run_eval.py  run_export.py  run_monitor.py  run_pipeline.py  run_thesis_fit.py
.github/workflows/: ci.yml
app/: __init__.py  agent_trace_store.py  config.py  dashboard_api.py  database.py  enrichment_audit.py  fund_profiles.py  identity_validation.py  main.py  models.py  pipeline_cache.py  profile_link_discovery.py  region_hints.py  report_generator.py  researcher_enrichment.py  researcher_links.py  run_diff_models.py  run_diff_store.py  run_export.py  run_service.py  run_store.py  schemas.py  scoring.py  service.py  thesis_fit_models.py  thesis_fit_rules.py  thesis_fit_sonar.py  thesis_fit_store.py
app/agents/: __init__.py  diff_agent.py  enrichment_agent.py  (+9 more)
dashboard/: __init__.py  agent_trace_ui.py  candidate_table_ui.py  context_ui.py  diff_ui.py  enrichment_audit_ui.py  filters.py  leaderboard.py  leaderboard_ui.py  researcher_links_ui.py  scoring_ui.py  streamlit_app.py  thesis_fit_ui.py
docs/: configuration.md
evals/: README.md  golden_set.json  harness.py  runner.py
funds/: backtrace.yaml  default.yaml
tests/: conftest.py  test_agent_tools.py  test_agent_trace_store.py  test_agent_trace_ui.py  test_agentic_live.py  test_agentic_signal_graph.py  test_api.py  test_dashboard_context.py  test_dashboard_filters.py  test_diff_agent.py  test_enrichment_audit.py  test_eval_harness.py  test_fund_profiles.py  test_github.py  test_identity_validation.py  test_ingestion.py  test_leaderboard.py  test_models.py  test_openalex.py  test_openreview.py  test_paper_reuse.py  test_perplexity.py  test_perplexity_agent.py  test_pipeline_cache.py  test_profile_agent.py  test_profile_link_discovery.py  test_report_generator.py  test_researcher_enrichment.py  test_researcher_links.py  test_run_export.py  test_run_store.py  test_scoring.py  test_semantic_scholar.py  test_signal_agent.py  test_signal_coordinator.py  test_thesis_fit_agent.py  test_thesis_fit_rules.py
webapp/: app.js  index.html  style.css
(+26 files in other folders)
