[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab2startup"
version = "0.1.0"
description = "Agentic VC sourcing tool for academic founder signal monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "streamlit>=1.32.0",
  "pandas>=2.0.0",
  "pytest>=8.0.0",
  "pyyaml>=6.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[project.scripts]
lab2startup-run = "run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "dashboard*"]

[tool.setuptools]
py-modules = ["run_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", ".cache", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"run_pipeline.py" = ["E402"]
"run_dashboard.py" = ["E402"]
"run_app.py" = ["E402"]
"run_enrichment_check.py" = ["E402"]
"dashboard/streamlit_app.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app", "dashboard"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
